# ftfrs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO  perf_notes.txt
benches/: README.md  bench_main.rs
examples/: trace_tool.rs  write_bench.rs
src/: argument.rs  bitutils.rs  event.rs  header.rs  initialization.rs  lib.rs  metadata.rs  string_rec.rs  stringrec.rs  strutils.rs  thread_rec.rs  threadrec.rs  wordutils.rs
src/tests/: archive_test.rs  bitutils_test.rs  event_test.rs  initialization_test.rs  metadata_test.rs  string_rec_test.rs  stringrec_test.rs  thread_rec_test.rs  threadrec_test.rs
