[package]
name = "ftfrs"
version = "0.1.1"
edition = "2021"
description = "Read and write Fuchsia Trace Format (FTF) traces with Rust"
repository = "https://github.com/maruthgoyal/ftfrs"
license = "MIT"

exclude = [
	".github/*",
]

[dependencies]
anyhow = "1.0.97"
log = "0.4.27"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[example]]
name = "trace_tool"
path = "examples/trace_tool.rs"

[[bench]]
name = "bench_main"
harness = false
