[package]
name = "ftfrs"
version = "0.1.1"
edition = "2021"
description = "Read and write Fuchsia Trace Format (FTF) traces with Rust"
repository = "https://github.com/maruthgoyal/ftfrs"
license = "MIT"

exclude = [".github/*"]

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rustc-hash = "2.1.1"

[[example]]
name = "trace_tool"
path = "examples/trace_tool.rs"

[[bench]]
name = "bench_main"
harness = false
